; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/SPL/src/extr_stm32f4xx_tim.c_TIM_TIxExternalClockConfig.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/SPL/src/extr_stm32f4xx_tim.c_TIM_TIxExternalClockConfig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@TIM_TIxExternalCLK1Source_TI2 = common dso_local global i64 0, align 8
@TIM_ICSelection_DirectTI = common dso_local global i32 0, align 4
@TIM_SlaveMode_External1 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @TIM_TIxExternalClockConfig(%struct.TYPE_7__* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %10 = call i32 @IS_TIM_LIST1_PERIPH(%struct.TYPE_7__* %9)
  %11 = call i32 @assert_param(i32 %10)
  %12 = load i64, i64* %7, align 8
  %13 = call i32 @IS_TIM_IC_POLARITY(i64 %12)
  %14 = call i32 @assert_param(i32 %13)
  %15 = load i64, i64* %8, align 8
  %16 = call i32 @IS_TIM_IC_FILTER(i64 %15)
  %17 = call i32 @assert_param(i32 %16)
  %18 = load i64, i64* %6, align 8
  %19 = load i64, i64* @TIM_TIxExternalCLK1Source_TI2, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %27

21:                                               ; preds = %4
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %23 = load i64, i64* %7, align 8
  %24 = load i32, i32* @TIM_ICSelection_DirectTI, align 4
  %25 = load i64, i64* %8, align 8
  %26 = call i32 @TI2_Config(%struct.TYPE_7__* %22, i64 %23, i32 %24, i64 %25)
  br label %33

27:                                               ; preds = %4
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %29 = load i64, i64* %7, align 8
  %30 = load i32, i32* @TIM_ICSelection_DirectTI, align 4
  %31 = load i64, i64* %8, align 8
  %32 = call i32 @TI1_Config(%struct.TYPE_7__* %28, i64 %29, i32 %30, i64 %31)
  br label %33

33:                                               ; preds = %27, %21
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %35 = load i64, i64* %6, align 8
  %36 = call i32 @TIM_SelectInputTrigger(%struct.TYPE_7__* %34, i64 %35)
  %37 = load i32, i32* @TIM_SlaveMode_External1, align 4
  %38 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = or i32 %40, %37
  store i32 %41, i32* %39, align 4
  ret void
}

declare dso_local i32 @assert_param(i32) #1

declare dso_local i32 @IS_TIM_LIST1_PERIPH(%struct.TYPE_7__*) #1

declare dso_local i32 @IS_TIM_IC_POLARITY(i64) #1

declare dso_local i32 @IS_TIM_IC_FILTER(i64) #1

declare dso_local i32 @TI2_Config(%struct.TYPE_7__*, i64, i32, i64) #1

declare dso_local i32 @TI1_Config(%struct.TYPE_7__*, i64, i32, i64) #1

declare dso_local i32 @TIM_SelectInputTrigger(%struct.TYPE_7__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
